# research-oracle

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  PROMPT.md  README.md  SUBMISSION.md  package-lock.json  package.json
programs/research-oracle/: Cargo.toml
programs/research-oracle/src/: lib.rs
records/: calibration.json  oracle-state.json  state.json
scripts/: adaptive-engine.js  demo.sh  exit-now.js  generate-wallet.js  polymarket-scanner.js  scan-now.js  trade.js
skills/: consensus-estimate.md  oracle-research.md  position-size.md  research-market.md  scan-markets.md  track-performance.md
src/: index.ts  types.ts
src/api/: middleware.ts  routes.ts
src/consensus/: analysts.ts  combiner.ts  engine.ts
src/solana/: client.ts  idl.json  types.ts
src/state/: calibration.ts  manager.ts
