[package]
name = "research-oracle"
version = "0.1.0"
description = "Research Oracle - On-chain attestations for probability estimates"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "research_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
